# cuddly-goggles

./: .gitignore  CMakeLists.txt  build.sh  client.cpp  server.cpp
cmake_modules/: FindOpenCV.cmake
